--- a/Accordion.astro
+++ b/Accordion.astro
@@ -30,7 +30,9 @@ interface Props {
     accordionPanel.style.height = `${getPanelHeight(accordionItem)}px`
     accordionItem.classList.add('is-active')
     accordionItemHeader.setAttribute('aria-expanded', true)
-    accordionToggleIndicator.innerHTML = `<svg class="header__toggle-indicator" aria-hidden="true" data-prefix="fas" data-icon="minus" class="svg-inline--fa fa-minus fa-w-14" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"/></svg>`
+    accordionToggleIndicator.innerHTML = ` <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="header__toggle-indicator"  viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+</svg>`
   }
 
   const closeAccordionItem = (accordionItem) => {
@@ -42,7 +44,12 @@ interface Props {
     accordionPanel.style.height = 0
     accordionItemHeader.focus()
     accordionItemHeader.setAttribute('aria-expanded', false)
-    accordionToggleIndicator.innerHTML = `<svg class="header__toggle-indicator" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"/></svg>`
+    accordionToggleIndicator.innerHTML = ` <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="header__toggle-indicator" viewBox="0 0 16 16">
+        <path
+          fill-rule="evenodd"
+          d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"
+        ></path>
+      </svg>`
   }
 
   const isAccordionOpen = (accordionItem) => {
